# Lumen-AI_Powered_Assistant

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  chatbot.db  chatbot.db-shm  chatbot.db-wal  compose.yml  config.py  deploy.ps1  makefile  new_image_deploy.ps1  notes.txt  pyproject.toml  requirements.txt
backend/: Dockerfile  config.py  main.py  pyproject.toml  requirements.txt
backend/api/: main.py
backend/api/routers/: chat.py  documents.py  threads.py
backend/core/: checkpointer.py  graph.py  nodes.py  state.py
backend/db/: __init__.py
backend/rag/: ingest.py  store.py
backend/routers/: chat.py  documents.py  threads.py
backend/tools/: __init__.py  stock_mcp.py
core/: __init__.py  checkpointer.py  graph.py  nodes.py  state.py
db/: __init__.py  database_utils.py
frontend/: Dockerfile  entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  config.ts  index.css
frontend/src/components/: ChatArea.tsx  ChatInput.tsx  DocumentUpload.tsx  MessageBubble.tsx  Sidebar.tsx  ThreadList.tsx  WelcomeScreen.tsx
frontend/src/components/ui/: button.tsx  dialog.tsx
my-terraform/: bootstrap.ps1  main.tf  outputs.tf  terraform.tfstate.1774813152.backup  terraform.tfstate.1774813153.backup  variables.tf
rag/: __init__.py  ingest.py  store.py
tools/: __init__.py  rag_tool.py  search_tool.py  stock_mcp.py
ui/: __init__.py  chat.py  dialogs.py  sidebar.py  utils.py
ui/assets/: style.css  welcome.html
