[project]
name = "campusx-langgraph-in-depth"
version = "0.1.0"
description = "This code base has in depth materials on LangGraph, a very powerful Agentic AI development platform."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.11.1",
    "duckduckgo-search>=8.1.1",
    "faiss-cpu>=1.13.2",
    "fastmcp>=3.1.0",
    "ipykernel>=7.2.0",
    "langchain>=1.2.10",
    "langchain-astradb>=1.0.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.0",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-openai>=1.1.10",
    "langchain-pinecone>=0.2.13",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.0.10",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langgraph-cli[inmem]>=0.4.12",
    "langsmith>=0.7.9",
    "pypdf>=6.7.5",
    "streamlit>=1.54.0",
]
